--- a/index.html
+++ b/index.html
@@ -111,50 +111,104 @@
         <a href="parthiban"></a>
         <a href="director"></a>
     </div>
-    <center><h1 class="service">SERVICE WE PROVIDE</h1></center>
-    <div class="service1">
-        <center>
-            <a href="">
-                <div class="items">
-                    <center><img class="web" src="coding.png" alt=""></center>
-                    <h5>web Developement</h5>
-                </div>
-            </a>
-            <a href="">
-                <div class="items">
-                    <center><img class="app" src="mobile-development.png" alt=""></center>
-                    <h5>app Developement</h5>
-                </div>
-            </a>
-            <a href="">
-                <div class="items">
-                    <center><img class="logo" src="logo-design.png" alt=""></center>
-                    <h5>logo Design</h5>
-                </div>
-            </a>
-            <a href="">
-                <div class="items">
-                    <center><img class="uiux" src="user-experience.png" alt=""></center>
-                    <h5>UI/UX Design</h5>
-                </div>
-            </a>
-            <a href="">
-                <div class="items">
-                    <center><img class="data" src="analytics.png" alt=""></center>
-                    <h5>Data Analysis</h5>
-                </div>
-            </a>
-            <a href="">
-                <div class="items">
-                    <center><img class="business" src="analyst.png" alt=""></center>
-                    <h5>Business Analysis</h5>
-                </div>
-            </a>
-        </center>
-         <div class="choose">
-            <h1>REASON TO CHOOSE US</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci provident, distinctio quam eos iure ipsum, maiores amet delectus doloribus, beatae repellendus error dignissimos? Nesciunt nemo molestiae ut debitis, nostrum ipsa quos. Cumque quae suscipit hic, minima fuga ullam minus?</p>
+    <div class="service0">
+        <center><h1 class="service">SERVICE WE PROVIDE</h1></center>
+        <div class="service1">
+            <center>
+                <a href="">
+                    <div class="items">
+                        <center><img class="web" src="coding.png" alt=""></center>
+                        <h5>web Developement</h5>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="items">
+                        <center><img class="app" src="mobile-development.png" alt=""></center>
+                        <h5>app Developement</h5>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="items">
+                        <center><img class="logo" src="logo-design.png" alt=""></center>
+                        <h5>logo Design</h5>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="items">
+                        <center><img class="uiux" src="user-experience.png" alt=""></center>
+                        <h5>UI/UX Design</h5>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="items">
+                        <center><img class="data" src="analytics.png" alt=""></center>
+                        <h5>Data Analysis</h5>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="items">
+                        <center><img class="business" src="analyst.png" alt=""></center>
+                        <h5>Business Analysis</h5>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="items" id="all">
+                        <center><img class="business" src="connection.png" alt=""></center>
+                        <h5>Overall Project</h5>
+                    </div>
+                </a>
+            </center>
         </div>
+    </div>
+    <div class="choose">
+        <h1>WHY HIRE US FOR NEXT PROGECT ?</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque, explicabo eligendi. Voluptatem omnis sapiente nobis vel consequuntur, saepe alias? Quas modi saepe quasi eos praesentium ab nihil cum iusto ducimus rerum quisquam at ipsa voluptatum neque id laudantium illum magnam veritatis nulla repellat, inventore exercitationem incidunt necessitatibus laborum. Eligendi exercitationem culpa quia ipsam esse hic, obcaecati, accusantium explicabo fuga delectus harum quasi. Illum vero natus inventore autem eaque ducimus aut rerum quo? Voluptas dolor ipsum necessitatibus laudantium provident vel quos optio suscipit neque, rem cumque perspiciatis quae magnam numquam, nesciunt laboriosam voluptatum. Pariatur nobis harum, molestiae necessitatibus repellat exercitationem perferendis!</p>
+        <button>Download cv</button>
+    </div>
+    <center>
+        <h1 class="knowheading">OUR SUCCESS</h1>
+        <div class="know">
+
+            <center>
+                <div class="customer">
+                    <center>
+                        <h1>10</h1>
+                        <h5>Happy Customer</h5>
+                    </center>
+                </div>
+            </center>
+            <center>
+                <div class="done">
+                    <center>
+                        <h1>20</h1>
+                        <h5>Project Done</h5>
+                    </center>
+                </div>
+            </center>
+            <center>
+                <div class="review">
+                    <center>
+                        <h1>73+</h1>
+                        <h5>Top Review</h5>
+                    </center>
+                </div>
+            </center>
+        </div>
+    </center>
+    <div class="about">
+
+            <div class="logos" id="main">
+                logo
+            </div>
+            <div id="linkedin" >
+                <a href=""><img src="linkedin(3).png" alt=""></a>
+            </div>
+            <div  id="facebook">
+                <a href=""><img src="facebook(2).png" alt=""></a>
+            </div>
+            <div  id="instagram">
+                <a href=""><img src="instagram(2).png" alt=""></a>
+            </div>
     </div>
     <script src="script.js"></script>
 </body>
