--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <center><h1 class="service">SERVICE WE PROVIDE</h1></center>
         <div class="service1">
             <center>
-                <a href="">
+                <a href="web.html">
                     <div class="items">
                         <center><img class="web" src="coding.png" alt=""></center>
                         <h5>web Developement</h5>
