--- a/web.html
+++ b/web.html
@@ -17,47 +17,45 @@
                 <li class="seperate"><a href="">Contact Us</a></li>
         </ul>
     </div>
-    <div class="mohit">
-        <h5>Introduction</h5>
-        <h3>Hello</h3>
-        <h2>I'm Mohit vinaakar V</h2>
-        <p>I am the team leader and also a fullstack developer since 2024.I know html,css,js for frontend, for backend i know python,django</p>
-        <button>contact me</button>
-        <img src="WhatsApp Image 2025-02-18 at 7.59.42 PM.jpeg" alt="">
-    <div class="circle1"></div>
-    <div class="circle2"></div>
-    <div class="circle3"></div>
-    </div>
-    <div class="pranav">
-        <h5>Introduction</h5>
-        <h3>Hello</h3>
-        <h2>I'm Pranav raj TG</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In labore at cumque eligendi autem deleniti, excepturi nisi eos alias qui?</p>
-        <button>contact me</button>
-        <div class="circle4"></div>
-        <div class="circle5"></div>
-        <div class="circle6"></div>
-    </div>
-    <div class="number">
-        <ul>
-            <li class="change active"></li>
-            <li class="change"></li>
-        </ul>
-    </div>
-    <div>
-        <div class="price"></div>
-            <ul>
-            <li class=" basic">
-                <h3>Basic</h3>
-            </li>
-            <li class="standerd">
-                <h3>Standerd</h3>
-            </li>
-            <li class="premium">
-                <h3>Premium</h3>
-            </li>
-        </ul>
-    </div>
+        <div class="overall">
+            <div class="price">
+                <ul>
+                    <li class="change active">
+                        <h2>Basic</h2>
+                    </li>
+                    <li class="change">
+                        <h2>Standerd</h2>
+                    </li>
+                    <li class="change">
+                        <h2>Premium</h2>
+                    </li>
+                </ul>
+            </div>
+            <div class="basic">
+                <img src="coding.png" alt="">
+                <b><h3 class="price1">PRICE</h3></b>
+                <p>₹5,000-₹15,000</p>
+                <b><h3 class="link">LINK TO CHECK:</h3></b>
+                <a class="click" href="#">click here</a>
+                <a href="#"><button>place order</button></a>
+            </div>
+            <div class="standerd">
+                <img src="connection.png" alt="">
+                <b><h3 class="price2">PRICE</h3></b>
+                <p class="">₹20,000-₹50,000</p>
+                <b><h3 class="link1">LINK TO CHECK:</h3></b>
+                <a class="click" href="#">click here</a>
+                <a href="#"><button>place order</button></a>
+            </div>
+            <div class="premium">
+                <img src="instagram.png" alt="">
+                <b><h3 class="price1">PRICE</h3></b>
+                <p>₹60,000-90,000</p>
+                <b><h3 class="link">LINK TO CHECK:</h3></b>
+                <a class="click" href="#">click here</a>
+                <a href="#"><button>place order</button></a>
+            </div>
+        </div>
     <div class="about">
 
         <div class="logos" id="main">
